--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -14,11 +14,11 @@ const t = translations.sections.about;
   order={3}
   id={t.id}
   title={t.title}
-  class="mx-auto max-w-screen-xl px-4 xs:px-8"
+  class="mx-auto max-w-screen-xl px-4 xs:px-6 sm:px-8"
 >
   <div
     class:list={[
-      "my-24 grid grid-cols-10 justify-center gap-6",
+      "my-6 grid grid-cols-10 justify-center gap-6 sm:mx-4",
       "*:overflow-clip *:rounded-xl *:border *:bg-background",
     ]}
   >
