--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -36,7 +36,7 @@ const currentDescription = next.description(locale);
 
 <Section
   id={t.id}
-  class="mx-auto max-w-screen-2xl px-4 xs:px-6"
+  class="mx-auto max-w-screen-2xl px-4 xs:px-6 sm:px-8"
   title={t.title}
   order={2}
 >
