--- a/source/sections/contact/content.astro
+++ b/source/sections/contact/content.astro
@@ -7,7 +7,13 @@ import { ContactForm } from "@modules/contact";
 import { Link } from "@components/base";
 import ParticleCanvas from "@components/particles/particle-canvas.astro";
 
-import { discord, email, linkedIn, xTwitter } from "@app/lib/data/socials";
+import {
+  discord,
+  email,
+  linkedIn,
+  xTwitter,
+  threads,
+} from "@app/lib/data/socials";
 
 const { translations } = Astro.locals;
 const t = translations.sections.contact;
@@ -15,32 +21,63 @@ const t = translations.sections.contact;
 
 <Section
   id={t.id}
-  class="z-0 mx-auto max-w-screen-xl px-4 pb-24 xs:px-6"
+  class="z-0 mx-auto max-w-screen-xl px-4 xs:px-6 sm:px-8"
   title={t.title}
   order={4}
 >
-  <div class="contact-section-grid">
+  <div class="contact-section-grid mt-6 pb-[4.5rem] sm:mx-4">
     <div
-      class="grid-area-thanks text-balance px-8 text-center font-header xl:self-center xl:px-0 xl:text-left"
+      class="grid-area-mail px-8 text-center font-header sm:text-balance xl:self-center xl:px-0 xl:text-left"
     >
       <p class="text-xl font-medium">
-        <span> Hey there! thank you for </span>
+        <span>Let's</span>
+        <span class="text-primary">get started.</span>
+      </p>
+
+      <p class="mt-8 text-base text-foreground/60">
+        <span
+          >Whether you have a question, a project in mind, or just want to say
+          hi, you can reach me at:
+        </span>
+
+        <a
+          href={email.href}
+          class="mt-7 flex items-center justify-center gap-x-4 py-2 text-primary/80 xl:justify-start"
+        >
+          <Icon
+            name="lucide:mail"
+            class="box-content inline-block size-[1.2em]"
+          />
+          <span class="hover:underline">
+            {email.href.slice(7)}
+          </span>
+        </a>
+      </p>
+    </div>
+
+    <div
+      class="grid-area-divider inline-block h-0.5 w-full bg-muted md:h-full md:w-0.5 xl:h-0.5 xl:w-full xl:bg-clip-content xl:pr-3"
+    >
+    </div>
+
+    <div
+      class="grid-area-links px-8 pt-12 text-center font-header sm:text-balance md:py-0 xl:self-center xl:px-0 xl:text-left"
+    >
+      <p class="text-xl font-medium">
+        <span> Thank you for </span>
         <span class="text-primary">your time!</span>
       </p>
 
       <p class="mt-8 text-base text-foreground/60">
-        <span>If you want to</span>
-        <span class="text-primary">get in touch</span>,
-        <span>
-          feel free to send me a message using any of these channels:
-        </span>
+        If you prefer it, feel free to also get in touch through any of the
+        following channels:
       </p>
 
       <ul
-        class="mt-8 flex w-full justify-center gap-x-2 xl:w-auto xl:justify-start"
+        class="mt-6 flex w-full justify-center gap-x-2 xl:w-auto xl:justify-start"
       >
         {
-          [linkedIn, xTwitter, discord, email].map(
+          [linkedIn, xTwitter, discord, threads].map(
             ({ href, i18nKey, iconKey }) => {
               const translatedLabel = translations.socials[i18nKey];
               return (
@@ -61,7 +98,7 @@ const t = translations.sections.contact;
                   >
                     <Icon
                       name={iconKey}
-                      class="box-content size-6 p-2 text-current sm:size-7 md:size-8"
+                      class="box-content size-8 p-2 text-current"
                     />
                   </Link>
                 </li>
@@ -71,34 +108,6 @@ const t = translations.sections.contact;
         }
       </ul>
     </div>
-
-    <div
-      class="grid-area-divider inline-block h-0.5 w-full bg-muted md:h-full md:w-0.5 xl:h-0.5 xl:w-full"
-    >
-    </div>
-
-    <!-- <div
-      class="grid-area-time text-balance px-8 text-center font-header xl:self-center xl:px-0 xl:text-left"
-    >
-      <p class="text-xl font-medium">
-        <span> Time zones are </span>
-        <span class="text-primary">no barrier!</span>
-      </p>
-
-      <p class="mt-8 text-base text-foreground/60">
-        <span
-          >You can contact me anytime, but be aware that I may not be available.
-          Right now my time is:
-        </span>
-      </p>
-
-      <div class="mt-8 xl:w-fit">
-        <MyTime
-          class="justify-start font-sans"
-          client:visible={{ rootMargin: "30%" }}
-        />
-      </div>
-    </div> -->
 
     <div
       class="grid-area-or flex w-full items-center justify-center gap-6 xl:h-full xl:flex-col"
@@ -111,7 +120,7 @@ const t = translations.sections.contact;
       <span class="h-0.5 w-1/2 bg-muted xl:h-1/2 xl:w-0.5"></span>
     </div>
 
-    <div class="grid-area-form relative flex flex-col py-6">
+    <div class="grid-area-form relative flex flex-col px-2 pb-12 pt-6 md:pb-0">
       <p
         class="mx-auto max-w-prose text-balance text-center font-header text-base font-medium tracking-wide text-foreground/80"
       >
@@ -128,11 +137,11 @@ const t = translations.sections.contact;
 
       <ContactForm
         data-contact-form
-        className="my-8 max-w-xl rounded-xl border border-primary/40 bg-[#0e0c0c] p-6 backdrop-blur-md sm:mx-auto"
+        className="mb-6 mt-10 max-w-xl rounded-xl border border-primary/40 bg-[#0e0c0c] p-6 backdrop-blur-md sm:mx-auto"
         client:visible={{ rootMargin: "30%" }}
       />
       <small
-        class="md:[.grid-areas-medium] z-10 -mt-2 text-center text-xs font-semibold text-muted-foreground"
+        class="z-10 text-center text-xs font-semibold text-muted-foreground xl:pb-0"
         >I don't retain nor share any of your data.</small
       >
     </div>
@@ -142,10 +151,11 @@ const t = translations.sections.contact;
 <style>
   [data-contact-form] {
     box-shadow: 0px 0px 100px -45px theme("colors.primary.DEFAULT");
+    clip-path: inset(0px, -350px, 0px, -15px);
   }
 
-  .grid-area-thanks {
-    grid-area: thanks;
+  .grid-area-links {
+    grid-area: links;
   }
 
   .grid-area-divider {
@@ -160,8 +170,8 @@ const t = translations.sections.contact;
     grid-area: form;
   }
 
-  .grid-area-time {
-    grid-area: time;
+  .grid-area-mail {
+    grid-area: mail;
   }
 
   .contact-section-grid {
@@ -170,9 +180,11 @@ const t = translations.sections.contact;
     grid-template-rows: repeat(5, auto);
     grid-template-columns: 1fr;
     grid-template-areas:
-      "thanks"
+      "mail"
       "or"
-      "form";
+      "form"
+      "divider"
+      "links";
   }
 
   @media screen(md) {
@@ -180,7 +192,7 @@ const t = translations.sections.contact;
       grid-template-rows: repeat(3, auto);
       grid-template-columns: 1fr auto 1fr;
       grid-template-areas:
-        "thanks thanks thanks"
+        "mail divider links"
         "or or or"
         "form form form";
     }
@@ -191,9 +203,9 @@ const t = translations.sections.contact;
       grid-template-rows: 1fr auto 1fr;
       grid-template-columns: minmax(auto, theme("containers.md")) auto 1fr;
       grid-template-areas:
-        "thanks or form"
-        "thanks or form"
-        "thanks or form";
+        "mail or form"
+        "divider or form"
+        "links or form";
     }
   }
 </style>
