--- a/source/sections/work/content.astro
+++ b/source/sections/work/content.astro
@@ -11,7 +11,7 @@ const t = translations.sections.experience;
 
 <Section
   id={t.id}
-  class="z-0 mx-auto max-w-screen-lg px-4 xs:px-6"
+  class="z-0 mx-auto max-w-screen-lg px-4 xs:px-6 sm:px-8"
   aria-label={t.name}
   title={t.title}
   order={1}
