--- a/source/sections/about/components/personal-side.astro
+++ b/source/sections/about/components/personal-side.astro
@@ -39,7 +39,7 @@ const t = translations.sections.about.bento.aboutMe;
         class="size-[1.5em]"
       />
     </picture>
-    <h3 class="mt-3 capitalize">{t.title}</h3>
+    <h3 class="mt-3">{t.title}</h3>
   </header>
 
   <div>
@@ -61,7 +61,7 @@ const t = translations.sections.about.bento.aboutMe;
     >
       <Picture
         src={pizzaEmoji}
-        alt="Pizza"
+        alt={t.pizzaEmojiAlt}
         formats={["avif", "webp", "png"]}
         class="size-full"
       />
