--- a/source/sections/contact/content.astro
+++ b/source/sections/contact/content.astro
@@ -15,7 +15,7 @@ import {
   threads,
 } from "@app/lib/data/socials";
 
-const { translations } = Astro.locals;
+const { locale, translations } = Astro.locals;
 const t = translations.sections.contact;
 ---
 
@@ -29,16 +29,13 @@ const t = translations.sections.contact;
     <div
       class="grid-area-mail px-8 text-center font-header sm:text-balance xl:self-center xl:px-0 xl:text-left"
     >
-      <p class="text-xl font-medium">
-        <span>Let's</span>
-        <span class="text-primary">get started.</span>
-      </p>
+      <p
+        class="text-xl font-medium"
+        set:html={t.headline1}
+      />
 
       <p class="mt-8 text-base text-foreground/60">
-        <span
-          >Whether you have a question, a project in mind, or just want to say
-          hi, you can reach me at:
-        </span>
+        <span set:html={t.text1} />
 
         <a
           href={email.href}
@@ -63,15 +60,15 @@ const t = translations.sections.contact;
     <div
       class="grid-area-links px-8 pt-12 text-center font-header sm:text-balance md:py-0 xl:self-center xl:px-0 xl:text-left"
     >
-      <p class="text-xl font-medium">
-        <span> Thank you for </span>
-        <span class="text-primary">your time!</span>
-      </p>
+      <p
+        class="text-xl font-medium"
+        set:html={t.headline2}
+      />
 
-      <p class="mt-8 text-base text-foreground/60">
-        If you prefer it, feel free to also get in touch through any of the
-        following channels:
-      </p>
+      <p
+        class="mt-8 text-base text-foreground/60"
+        set:html={t.text2}
+      />
 
       <ul
         class="mt-6 flex w-full justify-center gap-x-2 xl:w-auto xl:justify-start"
@@ -115,18 +112,18 @@ const t = translations.sections.contact;
       <span class="h-0.5 w-1/2 bg-muted xl:h-1/2 xl:w-0.5"></span>
       <span
         class="py-6 text-sm font-black text-muted-foreground xl:px-3 xl:py-0"
-        >OR</span
-      >
+        set:text={t.or}
+      />
       <span class="h-0.5 w-1/2 bg-muted xl:h-1/2 xl:w-0.5"></span>
     </div>
 
-    <div class="grid-area-form relative flex flex-col px-2 pb-12 pt-6 md:pb-0">
+    <div
+      class="grid-area-form relative flex flex-col px-2 pb-12 pt-6 md:pb-0 xl:pt-0"
+    >
       <p
         class="mx-auto max-w-prose text-balance text-center font-header text-base font-medium tracking-wide text-foreground/80"
-      >
-        <span> Fill this form and I will get back to you </span>
-        <span class="text-primary">as soon as possible</span>.
-      </p>
+        set:html={t.formFill}
+      />
 
       <div class="absolute inset-x-10 inset-y-20 -z-10">
         <ParticleCanvas
@@ -138,12 +135,13 @@ const t = translations.sections.contact;
       <ContactForm
         data-contact-form
         className="mb-6 mt-10 max-w-xl rounded-xl border border-primary/40 bg-[#0e0c0c] p-6 backdrop-blur-md sm:mx-auto"
+        {locale}
         client:visible={{ rootMargin: "30%" }}
       />
       <small
         class="z-10 text-center text-xs font-semibold text-muted-foreground xl:pb-0"
-        >I don't retain nor share any of your data.</small
-      >
+        set:text={t.privacy}
+      />
     </div>
   </div>
 </Section>
