--- a/source/sections/about/components/at-work.astro
+++ b/source/sections/about/components/at-work.astro
@@ -30,7 +30,7 @@ const approach = {
       formats={["avif", "webp", "png"]}
       class="mt-2 size-[1.3em]"
     />
-    <h3 class="mt-3 capitalize">{t.title}</h3>
+    <h3 class="mt-3">{t.title}</h3>
   </header>
   <p
     class="mt-8 text-pretty text-base text-foreground/80"
