--- a/source/sections/about/components/location.astro
+++ b/source/sections/about/components/location.astro
@@ -6,11 +6,12 @@ import { cn } from "@lib/utils/shadcn";
 
 import MyTime from "./my-time.svelte";
 import houseEmoji from "../assets/emojis/house.png";
+import { MY_TIMEZONE, TimeDiff } from "@app/modules/i18n";
 
 export type Props = HTMLAttributes<"article">;
 const { class: clazz, ...props } = Astro.props;
 
-const { translations } = Astro.locals;
+const { locale, translations } = Astro.locals;
 const t = translations.sections.about.bento.location;
 ---
 
@@ -40,7 +41,14 @@ const t = translations.sections.about.bento.location;
       />
 
       <p class="mt-1.5 text-center text-lg font-medium text-foreground/60">
-        <small> We are on the same timezone </small>
+        <small>
+          <TimeDiff
+            {locale}
+            timezoneA={MY_TIMEZONE}
+            timezoneB="user"
+            client:visible={{ rootMargin: "30%" }}
+          />
+        </small>
       </p>
     </div>
 
@@ -51,7 +59,8 @@ const t = translations.sections.about.bento.location;
 
     <MyTime
       class="justify-start text-center font-sans @lg:w-fit @lg:justify-self-center"
-      client:idle
+      {locale}
+      client:visible={{ rootMargin: "30%" }}
     />
   </div>
 </article>
