--- a/source/sections/work/components/job-entry.astro
+++ b/source/sections/work/components/job-entry.astro
@@ -77,10 +77,16 @@ function getDatetime(date: Date) {
     </div>
   </header>
 
-  <p
-    class="max-w-[50rem] whitespace-pre-line text-pretty text-base text-foreground/80 group-hover:text-accent-foreground/80"
-    set:html={job.description(locale)}
-  />
+  <div class="space-y-[1lh]">
+    {
+      job.description(locale).map((paragraph) => (
+        <p
+          class="max-w-[50rem] text-pretty text-base text-foreground/80 group-hover:text-accent-foreground/80"
+          set:html={paragraph}
+        />
+      ))
+    }
+  </div>
 
   <footer class="mt-10 flex flex-wrap gap-2">
     {
