--- a/source/layouts/footer.astro
+++ b/source/layouts/footer.astro
@@ -7,7 +7,9 @@ const t = translations.footer;
 const [beforeHeart, afterHeart] = t.note.split("{heart}");
 ---
 
-<footer class="z-10 mx-auto max-w-screen-xl border-t border-border py-6">
+<footer
+  class="relative z-10 mx-auto max-w-screen-xl border-t border-border py-6"
+>
   <p
     class="w-full text-balance px-4 text-center text-sm"
     data-footer-note
