fix: translations causing entire translation map to end up in bundle

--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -37,6 +37,7 @@ const t = translations.sections.hero;
         class="relative right-0.5 top-0.5"
         src={avatar}
         alt="Avatar"
+        loading="eager"
         formats={["avif", "webp", "png"]}
       />
     </div>
