--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -52,7 +52,7 @@ const t = translations.sections.hero;
 
     <div class="mt-8 @container">
       <div
-        class="flex flex-col-reverse items-center justify-center gap-y-4 @[25rem]:flex-row @[25rem]:justify-start"
+        class="mt-2 flex flex-col items-center justify-center gap-y-4 @[25rem]:mt-0 @[25rem]:flex-row @[25rem]:justify-start"
       >
         <Badge
           hoverGlow
@@ -70,7 +70,7 @@ const t = translations.sections.hero;
         </Badge>
 
         <span
-          class="ml-4 mr-2 hidden bg-muted-foreground/50 @[25rem]:inline-block @[25rem]:h-6 @[25rem]:w-0.5 @[36rem]:h-8"
+          class="inline-block h-0.5 w-1/2 bg-muted-foreground/50 @[25rem]:ml-4 @[25rem]:mr-2 @[25rem]:h-6 @[25rem]:w-0.5 @[36rem]:h-8"
         ></span>
 
         <ul class="flex gap-x-2">
