--- a/source/sections/work/content.astro
+++ b/source/sections/work/content.astro
@@ -18,7 +18,7 @@ const t = translations.sections.experience;
 >
   <Timeline
     client:idle
-    class="ml-4 flex w-full items-start py-6 lg:ml-8"
+    class="ml-2 flex w-full items-start py-6 sm:ml-4 lg:ml-8"
     itemCount={jobs.length}
   >
     <ul>
