--- a/source/components/particles/particle-canvas.astro
+++ b/source/components/particles/particle-canvas.astro
@@ -27,4 +27,5 @@ const { quantity = 30, color = "rgb(255, 255, 255)" } = Astro.props;
   {quantity}
   {color}
   aria-hidden="true"
+  class="opacity-0"
 ></particle-canvas>
