--- a/source/layouts/seo.astro
+++ b/source/layouts/seo.astro
@@ -2,9 +2,11 @@
 import type { ComponentProps } from "astro/types";
 import { SEO } from "astro-seo";
 
+import { xTwitter } from "@lib/data/socials";
 import {
   DEFAULT_LOCALE,
   SUPPORTED_LOCALES,
+  TRANSLATIONS,
   getLocaleRoute,
 } from "@modules/i18n";
 
@@ -15,26 +17,59 @@ type Props = Pick<ComponentProps<typeof SEO>, "title" | "description"> & {
 };
 
 const { title, description, canonicalPathname } = Astro.props;
-const { locale } = Astro.locals;
+const { locale, translations } = Astro.locals;
 
 // All the others that are not the current one.
 const alternateLocales = SUPPORTED_LOCALES.filter((lang) => lang !== locale);
+const alternateLocaleTerritories = SUPPORTED_LOCALES.map((lang) => {
+  return TRANSLATIONS[lang].meta.code;
+});
 const makeProductionUrl = (pathname: string) =>
   `${Astro.site?.origin}${pathname}`;
+
+const cleanTitle = title.trim();
+const cleanDescription = description.replace(/\s+/g, " ").trim();
+const canonicalURL = makeProductionUrl(
+  getLocaleRoute(DEFAULT_LOCALE, canonicalPathname),
+);
 ---
 
 <!-- noindex and nofollow are temporal. -->
 <SEO
-  title={title.trim()}
-  description={description.replace(/\s+/g, " ").trim()}
+  title={cleanTitle}
+  description={cleanDescription}
   charset="utf-8"
   languageAlternates={alternateLocales.map((locale) => ({
     href: makeProductionUrl(getLocaleRoute(locale, canonicalPathname)),
     hrefLang: locale,
   }))}
-  canonical={makeProductionUrl(
-    getLocaleRoute(DEFAULT_LOCALE, canonicalPathname),
-  )}
+  canonical={canonicalURL}
+  openGraph={{
+    basic: {
+      title: cleanTitle,
+      type: "website",
+      image: makeProductionUrl(`/og-${locale}.png`),
+      url: canonicalURL,
+    },
+    optional: {
+      description: cleanDescription,
+      locale: translations.meta.code,
+      localeAlternate: alternateLocaleTerritories,
+    },
+    image: {
+      width: 1200,
+      height: 630,
+      alt: translations.meta.ogAlt,
+    },
+  }}
+  twitter={{
+    card: "summary_large_image",
+    site: `@${xTwitter.href.slice(xTwitter.href.lastIndexOf("/") + 1)}`,
+    title: cleanTitle,
+    image: makeProductionUrl(`/og-${locale}.png`),
+    imageAlt: translations.meta.ogAlt,
+    description: cleanDescription,
+  }}
   noindex
   nofollow
 />
