refactor: cleaned imports and translated content on hamburger menu

--- a/source/layouts/header.astro
+++ b/source/layouts/header.astro
@@ -1,5 +1,7 @@
 ---
-import { LanguageSelector } from "@app/modules/i18n";
+import { LanguageSelector } from "@modules/i18n";
+
+// For some reason, importing directly from @modules/navigation breaks the hamburger menu.
 import PageLinks from "@modules/navigation/components/page-links.astro";
 import { HamburgerMenu } from "@modules/navigation/components/hamburger-menu";
 
