--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -1,10 +1,6 @@
 ---
-import { Icon } from "astro-icon/components";
-
-import { Link } from "@app/components/base";
-import { Button } from "@app/components/ui/react";
+import { Button } from "@components/ui/react";
 import { Section } from "@app/layouts";
-import { getLocaleRoute } from "@modules/i18n";
 
 import { projects, next } from "./lib/data";
 import ProjectList from "./components/project-list.astro";
