fix: translations on new tab message plus locale territory codes

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -27,7 +27,8 @@ const {
   ...props
 } = Astro.props;
 
-const ariaLabel = `Link to "${label}"${targetBlank ? ` (opens in a new tab)` : ""}`;
+const { translations } = Astro.locals;
+const ariaLabel = `Link to "${label}"${targetBlank ? ` (${translations.misc.newTab})` : ""}`;
 const tippyProps = Object.entries(withTooltip).reduce(
   (props, [key, value]) => {
     props[`data-tippy-${key}`] = `${value}`;
