feat: add archive page

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -52,7 +52,7 @@ const optionalAttrs = {
 >
   {
     withExternalLinkArrow ? (
-      <span>
+      <span class="whitespace-nowrap">
         <slot />
         <Icon
           name="lucide:arrow-up-right"
